--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "author": "Prabhjot Singh",
   "license": "BSD-2-Clause",
-
-"dependencies": {
+  "dependencies": {
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-router": "^2.0.0-rc5"
+    "react-router": "^2.0.0-rc5",
+    "icheck": "~1.0.2",
+    "react-icheck": "~0.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
