--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "^0.14.6",
     "react-router": "^2.0.0-rc5",
     "icheck": "~1.0.2",
-    "react-icheck": "~0.3.2"
+    "react-icheck": "~0.3.2",
+    "react-websocket": "~1.0.0",
+    "websocket": "~1.0.23",
+    "socket.io": "~1.4.6",
+    "net": "~1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
